force-app/main/default/objects/Milestone1_Log__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <inlineHelpText>The details about the log. This is freeform text for user to capture whatever data they want to keep track of in the log.</inlineHelpText>
    <label>Detail</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>