force-app/main/default/objects/Milestone1_Log__c/fields/Project_Expense__c.field-meta.xml
<CustomField>
    <fullName>Project_Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A project expense we want to log some information about.</inlineHelpText>
    <label>Project Expense</label>
    <referenceTo>Milestone1_Expense__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Project_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>