force-app/main/default/objects/Milestone1_Log__c/fields/Project_Task__c.field-meta.xml
<CustomField>
    <fullName>Project_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A project task we want to log some information about.</inlineHelpText>
    <label>Project Task</label>
    <referenceTo>Milestone1_Task__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Project_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>